# basic_integer_calculator

./: CMakeLists.txt  main.cpp
controller/: HandleCalculator.cpp  HandleCalculator.h
log/: operationsLog.txt
model/: Calculator.cpp  Calculator.h
view/: WindowCalculator.cpp  WindowCalculator.h
